# premortem

./: .gitignore  AGENT.md  CLAUDE.md  README.md  WRAPUP.md  pyproject.toml
docs/: index.html
premortem/: cli.py  docs.py  edsl_jobs.py  ingest.py  jobgen.py  renderer.py  store.py  workflow.py
premortem/commands/: agent_end.py  analyze.py  common.py  docs.py  graph.py  ingest.py  init.py  job.py  mitigate.py  persona.py  project.py  reason.py  report.py  score.py  status.py  workflow.py
premortem/docs_content/: __init__.py  causal-graph.md  facilitation-guide.md  failure-reasons.md  failure-statement.md  mitigations.md  overview.md  personas.md  reporting.md  research-agenda.md
premortem/models/: __init__.py  graph.py  meta.py  mitigation.py  persona.py  reason.py  score.py
premortem/templates/: report_template.html
tests/: test_edsl_jobs.py  test_json_envelopes.py
