[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premortem"
version = "0.1.0"
description = "Gary Klein style pre-mortem analysis CLI"
requires-python = ">=3.11"
dependencies = [
  "edsl @ git+https://github.com/expectedparrot/edsl.git",
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12"
]

[project.scripts]
premortem = "premortem.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["premortem*"]

[tool.setuptools.package-data]
"premortem.docs_content" = ["*.md"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
